fixed menu padding on mobile

--- a/client/src/styles/_header.scss
+++ b/client/src/styles/_header.scss
@@ -159,7 +159,7 @@
         width: 200px;
         height: 100%;
         background-color: #fff;
-        padding-top: 30px;
+        padding-top: 10px;
         left: -200px;
         // transition: 0.3s;
         z-index: 9998;
